--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/vite": "^4.1.17",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.19.24",
+    "@types/react": "19.2.2",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4.1.17",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
